xml/src2/objects/Student_Numbers__c.object
<CustomObject>
    <description>Organization number of students for each year</description>
    <fields>
        <fullName>Number_Of_Students__c</fullName>
        <inlineHelpText>Enter number of students enrolled at institution during specified enrollment year</inlineHelpText>
        <label>Number Of Students</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>School_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Number of students in a particular year in an Organization School</description>
        <label>School(Organization)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Student Numbers</relationshipLabel>
        <relationshipName>SchoolsYearStudents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>Year Number</description>
        <inlineHelpText>Enter Year Number</inlineHelpText>
        <label>Fall Enrollment Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Student Numbers</label>
    <nameField>
        <displayFormat>SN - {0000}</displayFormat>
        <label>Student Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>YearEstablished_Year</fullName>
        <active>true</active>
        <description>Year should be Equal or greater than Year Established</description>
        <errorConditionFormula>IF (NOT (ISNULL( VALUE( Year__c))),   VALUE(School_Organization__r.Year_Established__c)    &gt;    VALUE(Year__c)   ,FALSE)</errorConditionFormula>
        <errorDisplayField>Year__c</errorDisplayField>
        <errorMessage>Year Should be Greater Than or Equal to School Year Established</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Year_NotLess_4</fullName>
        <active>true</active>
        <description>Year should not be less than 4 Numbers</description>
        <errorConditionFormula>AND((Year__c &lt;&gt; null),LEN(Year__c ) &lt; 4)</errorConditionFormula>
        <errorDisplayField>Year__c</errorDisplayField>
        <errorMessage>&apos;Year&apos; should not contain a value less than 4 Numbers</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Year_Number</fullName>
        <active>true</active>
        <description>Year should be only Number</description>
        <errorConditionFormula>AND(( Year__c  &lt;&gt; null),  
NOT(ISNUMBER( Year__c )))</errorConditionFormula>
        <errorDisplayField>Year__c</errorDisplayField>
        <errorMessage>Only Year(Number) should be entered</errorMessage>
    </validationRules>
</CustomObject>